--- a/app/views/templates/index.html
+++ b/app/views/templates/index.html
@@ -1,6 +1,9 @@
 {{define "content"}}
 UserName: {{ .Name }}
 <h1>Sample TodoApp</h1>
+<p>
+<a href="/todos/new">Create</a>
+</p>
 <hr>
 
 {{ range .Todos }}
