Updateのハンドラ作成

--- a/app/views/templates/index.html
+++ b/app/views/templates/index.html
@@ -7,6 +7,6 @@
 
 {{ range .Todos }}
 <div>{{ .Content }}</div>
-<p><a href="/todos/edit/{{.ID}}"></a></p>
+<p><a href="/todos/edit/{{.ID}}">Edit</a></p>
 <hr />
 {{end}} {{end}}
